...
    return Padding(
        padding: const EdgeInsets.all(24),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          mainAxisSize: MainAxisSize.min,
          children: <Widget>[
            TextField(
              autofocus: true,
              key: const Key('TextField'),
              controller: titleController,
              onChanged: (val) {
                setState(() {});
              },
...
                        style: textTheme.subtitle2
                            ?.copyWith(color: AppColors.primaryMedium),
                      )
                    ]),
                  )),
              ElevatedButton(
                  key: const Key('SendButton'),
                  style: ElevatedButton.styleFrom(
                      padding: const EdgeInsets.all(10),
                      elevation: 0,
                      shape: const CircleBorder(),
                      disabledBackgroundColor: AppColors.background,
                      backgroundColor: titleController.text.isEmpty
...
