...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
        floatingActionButton: FloatingActionButton(
          key: const Key('AddButton'),
          onPressed: () async {
            _addTaskFunction();
          },
          child: const Icon(Icons.add),
        ),
        appBar: AppBar(
...
